- Show key moves of device upgrades on key move tab, as grayed out and not editable (Graham)
- Added facility to import and edit protocols from ProtocolBuilder (Graham)
- Tentative fix for Setup.vbs on 64-bit Windows 7 (Greg)
- Disable context menu items for device upgrade keymoves shown on the keymove panel (Greg)
-- Preview 6 --
- Enable export as a .ir file
- Enable Open RDF toolbar button after a download (Graham)
- Change bar color of Progress Bars to aquamarine, for greater contrast with blue text (Graham)
- Avoid null pointer exception in Code Selector when a device type has no built-in setup codes (Graham)
- Scroll notes of General Panel to top upon opening (Graham)
- If new device upgrade is not assigned to a device button, open dialog giving user an opportunity to do so (Graham)
- Prevented manual protocols from undergoing translation when updating buffer (Graham)
- Add support for using device upgrade functions in the keymove editor (Greg)
- Fix KM file filtering in Device Upgrade Editor open file dialog (Greg)
- Fix key code keymove support (Greg)
-- Preview 7 --
- Add Detach button and context menu item to Key Moves tab, to detach keymoves what are associated to device upgrades.  Supports multiple selection (Greg)
- Add installed upgrade selector to keymove editor, for upgrades that aren't assigned to a device button (Greg)
- Add * after PID in Device tab to indicate a protocol upgrade will be installed with the device upgrade. (Greg)
- Fixes for EFC5 handling of single-byte functions (Graham/Greg)
- Fix bug to allow entry of Hex data in Key Move Dialog (Graham)
- When decoding an E2image, don't associate keymoves to a device upgrade when the key is in the button map. (Greg)
-- Preview 8 --
- Check EEPROM size against RDF when importing .ir file (Graham)
- Use Fixed Data as a matching criterion when downloading or importing a .ir file (Graham)
- Ask whether to replace fixed data when there is a mismatch with RDF (Graham) 