@@ -6,45 +6,53 @@ package com.hifiremote.jp1;
  */
 public abstract class Processor
 {
-  
+
   /**
    * Instantiates a new processor.
    * 
-   * @param name the name
+   * @param name
+   *          the name
    */
   public Processor( String name )
   {
     this( name, null, false );
   }
-  
+
   /**
    * Instantiates a new processor.
    * 
-   * @param name the name
-   * @param reverse the reverse
+   * @param name
+   *          the name
+   * @param reverse
+   *          the reverse
    */
   public Processor( String name, boolean reverse )
   {
-	  this( name, null, reverse );
+    this( name, null, reverse );
   }
 
   /**
    * Instantiates a new processor.
    * 
-   * @param name the name
-   * @param version the version
+   * @param name
+   *          the name
+   * @param version
+   *          the version
    */
   public Processor( String name, String version )
   {
-	this( name, version, false );
+    this( name, version, false );
   }
-  
+
   /**
    * Instantiates a new processor.
    * 
-   * @param name the name
-   * @param version the version
-   * @param reverse the reverse
+   * @param name
+   *          the name
+   * @param version
+   *          the version
+   * @param reverse
+   *          the reverse
    */
   public Processor( String name, String version, boolean reverse )
   {
@@ -55,8 +63,10 @@ public abstract class Processor
   /**
    * Sets the vector edit data.
    * 
-   * @param opcodes the opcodes
-   * @param addresses the addresses
+   * @param opcodes
+   *          the opcodes
+   * @param addresses
+   *          the addresses
    */
   public void setVectorEditData( int[] opcodes, int[] addresses )
   {
@@ -64,12 +74,13 @@ public abstract class Processor
     this.addresses = addresses;
   }
 
-
   /**
    * Sets the data edit data.
    * 
-   * @param min the min
-   * @param max the max
+   * @param min
+   *          the min
+   * @param max
+   *          the max
    */
   public void setDataEditData( int min, int max )
   {
@@ -82,15 +93,21 @@ public abstract class Processor
    * 
    * @return the name
    */
-  public String getName(){ return name; }
-  
+  public String getName()
+  {
+    return name;
+  }
+
   /**
    * Gets the version.
    * 
    * @return the version
    */
-  public String getVersion(){ return version; }
-  
+  public String getVersion()
+  {
+    return version;
+  }
+
   /**
    * Gets the full name.
    * 
@@ -99,9 +116,13 @@ public abstract class Processor
   public String getFullName()
   {
     if ( version == null )
+    {
       return name;
+    }
     else
+    {
       return name + '-' + version;
+    }
   }
 
   /**
@@ -117,16 +138,17 @@ public abstract class Processor
   /**
    * Translate.
    * 
-   * @param hex the hex
-   * @param remote the remote
-   * 
+   * @param hex
+   *          the hex
+   * @param remote
+   *          the remote
    * @return the hex
    */
   public Hex translate( Hex hex, Remote remote )
   {
     int vectorOffset = remote.getProtocolVectorOffset();
     int dataOffset = remote.getProtocolDataOffset();
-    if (( vectorOffset != 0 ) || ( dataOffset != 0 ))
+    if ( vectorOffset != 0 || dataOffset != 0 )
     {
       try
       {
@@ -138,18 +160,23 @@ public abstract class Processor
       }
     }
     if ( vectorOffset != 0 )
+    {
       doVectorEdit( hex, vectorOffset );
+    }
     if ( dataOffset != 0 )
+    {
       doDataEdit( hex, dataOffset );
+    }
     return hex;
   }
 
   /**
    * Import code.
    * 
-   * @param code the code
-   * @param processorName the processor name
-   * 
+   * @param code
+   *          the code
+   * @param processorName
+   *          the processor name
    * @return the hex
    */
   public Hex importCode( Hex code, String processorName )
@@ -160,27 +187,33 @@ public abstract class Processor
   /**
    * Gets the int.
    * 
-   * @param data the data
-   * @param offset the offset
-   * 
+   * @param data
+   *          the data
+   * @param offset
+   *          the offset
    * @return the int
    */
   public abstract int getInt( short[] data, int offset );
-  
+
   /**
    * Put int.
    * 
-   * @param val the val
-   * @param data the data
-   * @param offset the offset
+   * @param val
+   *          the val
+   * @param data
+   *          the data
+   * @param offset
+   *          the offset
    */
   public abstract void putInt( int val, short[] data, int offset );
-  
+
   /**
    * Do vector edit.
    * 
-   * @param hex the hex
-   * @param vectorOffset the vector offset
+   * @param hex
+   *          the hex
+   * @param vectorOffset
+   *          the vector offset
    */
   private void doVectorEdit( Hex hex, int vectorOffset )
   {
@@ -190,7 +223,7 @@ public abstract class Processor
       short opCode = data[ i ];
       for ( int j = 0; j < opCodes.length; j++ )
       {
-        if ( opCode == opCodes [ j ])
+        if ( opCode == opCodes[ j ] )
         {
           int address = getInt( data, i + 1 );
           for ( int k = 0; k < addresses.length; k++ )
@@ -212,8 +245,10 @@ public abstract class Processor
   /**
    * Do data edit.
    * 
-   * @param hex the hex
-   * @param dataOffset the data offset
+   * @param hex
+   *          the hex
+   * @param dataOffset
+   *          the data offset
    */
   private void doDataEdit( Hex hex, int dataOffset )
   {
@@ -221,22 +256,23 @@ public abstract class Processor
 
     for ( int i = 0; i < data.length - 1; i++ )
     {
-      if ((( data[ i ] & Hex.ADD_OFFSET ) != 0 ) &&
-          (( data[ i + 1 ] & Hex.ADD_OFFSET ) != 0 ))
+      if ( ( data[ i ] & Hex.ADD_OFFSET ) != 0 && ( data[ i + 1 ] & Hex.ADD_OFFSET ) != 0 )
       {
         int temp = getInt( data, i );
-        if (( temp < minDataAddress ) || ( temp > maxDataAddress ))
+        if ( temp < minDataAddress || temp > maxDataAddress )
+        {
           continue;
+        }
         temp += dataOffset;
-        putInt( temp, data, i);
-        i++;
+        putInt( temp, data, i );
+        i++ ;
       }
     }
 
     for ( int i = 0; i < data.length; i++ )
     {
       int temp = data[ i ];
-      if (( temp & Hex.ADD_OFFSET ) != 0 )
+      if ( ( temp & Hex.ADD_OFFSET ) != 0 )
       {
         temp &= 0xFF;
         temp += dataOffset;
@@ -244,10 +280,13 @@ public abstract class Processor
       }
     }
   }
-  
-  /* (non-Javadoc)
+
+  /*
+   * (non-Javadoc)
+   * 
    * @see java.lang.Object#toString()
    */
+  @Override
   public String toString()
   {
     return getFullName();
@@ -255,19 +294,19 @@ public abstract class Processor
 
   /** The name. */
   private String name = null;
-  
+
   /** The version. */
   private String version = null;
-  
+
   /** The op codes. */
   private int[] opCodes = new int[ 0 ];
-  
+
   /** The addresses. */
   private int[] addresses = new int[ 0 ];
-  
+
   /** The min data address. */
   private int minDataAddress = 0x64;
-  
+
   /** The max data address. */
   private int maxDataAddress = 0x80;
 }
